// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the project card renders correctly 1`] = `
<div
  className="project"
>
  <div
    className="my-project"
  >
    MY PROJECT
  </div>
  <div
    className="card-project"
    id="fellow-undefined"
    role="button"
    tabIndex="0"
  >
    <Loader
      size=""
    />
  </div>
</div>
`;

exports[`tests the project card renders correctly with fellow details 1`] = `
<div
  className="project"
>
  <div
    className="my-project"
  >
    MY PROJECT
  </div>
  <div
    className="card-project"
    id="fellow-undefined"
    role="button"
    tabIndex="0"
  >
    <RenderItem
      title="Project Name"
    />
    <RenderItem
      title="LF"
    />
    <RenderItem
      title="PM"
    >
      --
    </RenderItem>
  </div>
</div>
`;

exports[`tests the project card renders loading with empty fellow details 1`] = `
<div
  className="project"
>
  <div
    className="my-project"
  >
    MY PROJECT
  </div>
  <div
    className="card-project"
    id="fellow-undefined"
    role="button"
    tabIndex="0"
  >
    <RenderItem
      title="Project Name"
    />
    <RenderItem
      title="LF"
    />
    <RenderItem
      title="PM"
    >
      --
    </RenderItem>
  </div>
</div>
`;
